# project-oriion

./: .gitignore  CLAUDE.md  HOW_IT_WORKS.md  README.md  RULES.md  context.md  plan.md
backend/: .env.example  pyproject.toml
backend/quorum/: __init__.py  app.py
backend/quorum/config/: __init__.py  settings.py
backend/quorum/domain/: __init__.py  color.py  compose.py  events.py  extrude.py  geometry.py  isometric.py  messages.py  op.py  parts.py  pathdata.py  shapes.py  tree.py
backend/quorum/engine/: __init__.py  clock.py  state.py
backend/quorum/eval/: __init__.py  adherence.py  battery.py  expectations.py
backend/quorum/gateway/: __init__.py  connection.py  handler.py  rooms.py
backend/quorum/observability/: __init__.py  harness.py  latency.py  logging.py
backend/quorum/pipeline/: __init__.py  classify.py  embeddings.py  intent.py  interfaces.py  llm.py  relations.py  renderer.py  retrieval.py  templates.py
backend/quorum/pipeline/templates/: isometric.json  (+1 more)
backend/scripts/: e2e_check.py  eval_adherence.py  eval_d2.py  eval_llm.py  make_isometric.py  mine_templates.py  probe_llm.py  render_d3.py
backend/tests/: test_adherence.py  test_cascade.py  test_classifier.py  test_compose.py  test_concurrency.py  test_d1_routing.py  test_d1_validation.py  test_d2_prompt.py  test_d3_solids.py  test_engine.py  test_extrude.py  test_geometry_v2.py  test_integration_loop.py  test_isometric.py  test_iteration_branch.py  test_label_resolution.py  test_latency.py  test_llm_critique.py  test_llm_escalation.py  test_llm_geometry.py  test_multi_solids.py  test_named_shapes.py  test_openrouter_backend.py  test_part_routing.py  test_parts.py  test_recolor.py  test_refinement_regression.py  test_renderer.py  test_retrieval.py  test_rooms.py  test_scene_extension.py  test_templates.py  test_undo.py
(+22 files in other folders)
